--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,8 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=33306
+DB_HOST=mysql
+DB_PORT=3306
 DB_DATABASE=crypto_wallet_analytics_app
 DB_USERNAME=root
 DB_PASSWORD=
